# image_processor

./: README.md
image_processor/: CMakeLists.txt  image_processor.cpp  image_processor.h  readme.md
image_processor/Filter/: Filter.cpp  Filter.h
image_processor/Image/: color.cpp  color.h  image.cpp  image.h
image_processor/Parser/: Parser.cpp  Parser.h
image_processor/Reader_and_Writer/: Reader.cpp  Reader.h  Utils.h  Writer.cpp  Writer.h
image_processor/test_script/unit_tests/: test.cpp
